samples/_failures_safe/1761127701_b2825e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ae07438.c: In function ‘main’:
./samples/SAFE/__tmp_2ae07438.c:165:40: error: invalid initializer
  165 |     struct compression_result result = compress_data
      |                                        ^~~~~~~~~~~~~
./samples/SAFE/__tmp_2ae07438.c:165:12: error: expected ‘,’ or ‘;’ at end of input
  165 |     struct compression_result result = compress_data
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2ae07438.c:165:12: error: expected declaration or statement at end of input
